# src/routes/user/notification.ts
@@ -1,5 +1,5 @@
 import express from 'express';
-import { getNotifications, markAsRead } from '../../controllers/user/notification';
+import { getNotifications, markAsRead, deleteNotifications } from '../../controllers/user/notification';
 import { verifyUser } from '../../middlewares/verifyUser';
 
 const router = express.Router();
@@ -8,5 +8,6 @@ router.use(verifyUser);
 
 router.get('/', getNotifications);
 router.post('/:id/read', markAsRead);
+router.delete('/delete/:id', deleteNotifications);
 
 export default router;
